New fourier filter
1) New arguments and options of fourier filter added
2) Small bugs with APD calculation and rescaling fixed

--- a/examples/WelcomeGuide_Part1.ipynb
+++ b/examples/WelcomeGuide_Part1.ipynb
@@ -985,7 +985,7 @@
    "metadata": {},
    "source": [
     "<a id='section.b'></a>\n",
-    "#### b) Fourier filter (work in progress)"
+    "#### b) Fourier filter"
    ]
   },
   {
@@ -994,7 +994,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fs = 1000"
+    "freq_noise = 70\n",
+    "signal_noisy = v + 0.1 * np.sin(freq_noise * 2 * np.pi * time)"
    ]
   },
   {
@@ -1003,7 +1004,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "signal = fourier_filter(v, Fs, [0,100], [61,59])"
+    "kwargs = {'fs' : 1000, # sampling frequency (Hz)\n",
+    "          'lp_freq' : None, # lowpass frequency (Hz)\n",
+    "          'hp_freq' : None, # highpass frequency (Hz)\n",
+    "          'bs_freqs' : [freq_noise, ], # bandstop frequency (Hz)\n",
+    "          'trans_width' : 2, # width of transition region between bands (Hz)\n",
+    "          'band_width' : 2, # width of bandstop in (Hz)\n",
+    "         }\n",
+    "signal_filtered = fourier_filter(signal_noisy, **kwargs)"
    ]
   },
   {
@@ -1013,13 +1021,22 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(17,4))\n",
-    "plt.plot(v[:400], 'b', label = 'original signal')\n",
-    "plt.plot(signal[:400], 'r', label = 'after filtration')\n",
+    "plt.plot(v[:400], label = \"original signal\")\n",
+    "plt.plot(signal_noisy[:400], label = 'original signal + noise')\n",
+    "plt.plot(signal_filtered[:400],  label = 'after filtration')\n",
     "plt.xlabel('Time, ms')\n",
     "plt.ylabel('V, mV')\n",
+    "plt.legend()\n",
     "plt.grid()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
