--- a/examples/WelcomeGuide_Part2.ipynb
+++ b/examples/WelcomeGuide_Part2.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "data = data_raw.copy()\n",
     "mask = np.loadtxt(\"./source/sample_optical_recordings_mask.txt\").astype(np.bool)\n",
-    "x, y, t = 80, 60, 10"
+    "x, y, t = 80, 60, 15"
    ]
   },
   {
@@ -131,11 +131,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fs = 1000.                    # sampling frequency\n",
-    "interval_to_trim = [0, 150]   # remove frequencies greater than 150Hz\n",
-    "interval_to_remove = [62, 58] # remove 60Hz hum\n",
-    "args = (Fs, interval_to_trim, interval_to_remove)\n",
-    "%time data_filtered = fourier_filter(data, *args)"
+    "kwargs = {'fs' : 1000, # sampling frequency (Hz)\n",
+    "          'lp_freq' : 100, # lowpass frequency (Hz)\n",
+    "          'hp_freq' : None, # highpass frequency (Hz)\n",
+    "          'bs_freqs' : [60, ], # bandstop frequency (Hz)\n",
+    "          'trans_width' : 2, # width of transition region between bands (Hz)\n",
+    "          'band_width' : 2, # width of bandstop in (Hz)\n",
+    "         }\n",
+    "%time data_filtered = fourier_filter(data, **kwargs)"
    ]
   },
   {
@@ -583,9 +586,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ps = phase_singularity_detection(phase[:, :, t])\n",
-    "\n",
-    "plt.imshow(phase[:, :, t], cmap = 'hsv')\n",
+    "ps = phase_singularity_detection(phase[:, :, t])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame = np.ma.masked_where(~mask, phase[:, :, t])\n",
+    "plt.imshow(frame, cmap = 'hsv')\n",
     "plt.colorbar()\n",
     "plt.plot(ps[:, 1], ps[:, 0], 'k.', ms = 10)\n",
     "plt.plot(ps[:, 1], ps[:, 0], 'w.', ms = 5)\n",
